# project2_makarova

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  engine.py  main.py  utils.py
