[tool.poetry]
name = "project2-makarova"
version = "0.1.0"
description = ""
authors = ["Maria Makarova <rebecca.castle2000@gmail.com>"]
readme = "README.md"
packages = [
    { include = "primitive_db", from = "src" },
]

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.0"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
